--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:support-v4:19.1.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'commons-io:commons-io:2.4'
+    compile 'de.greenrobot:eventbus:2.4.0'
 }
